--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -15,13 +15,36 @@ header {
         clip-path: url(#svgPath);
         min-height: 100vh;
 
+        canvas {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            width: 100%;
+            min-width: 300px;
+            min-height: 100%;
+            z-index: -1;
+        }
+
         .content {
-            text-align: center;
             svg {
                 margin-top: 40px;
-                margin-right: 180px;
-                margin-left: 20px;
-                width: 243px;
+                margin-left: 30px;
+                width: 230px;
+            }
+
+            
+            @media screen and (max-width: 992px) {
+                svg {
+                    width: 180px;
+                    margin-left: 10px;
+                }
+            }
+            @media screen and (max-width: 768px) {
+                svg {
+                    width: 120px;
+                    margin-left: 0;
+                }
             }
         }
     }
@@ -38,10 +61,11 @@ header {
 
             .bigtitle {
                 width: 100%;
-                margin: 0 40px;
+                margin: 0 auto;
+                max-width: 700px;
                 color: #FFEED3;
                 text-transform: uppercase;
-                font-size: 8em;
+                font-size: 7.5em;
 
                 span {
                     display: block;
