--- a/styles/css/auth.css
+++ b/styles/css/auth.css
@@ -7,15 +7,34 @@ header .header-left {
   position: relative;
   clip-path: url(#svgPath);
   min-height: 100vh;
+  overflow: hidden;
 }
-header .header-left .content {
-  text-align: center;
+header .header-left canvas {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  min-width: 300px;
+  min-height: 100%;
+  z-index: -1;
 }
 header .header-left .content svg {
   margin-top: 40px;
-  margin-right: 180px;
-  margin-left: 20px;
-  width: 243px;
+  margin-left: 30px;
+  width: 230px;
+}
+@media screen and (max-width: 992px) {
+  header .header-left .content svg {
+    width: 180px;
+    margin-left: 10px;
+  }
+}
+@media screen and (max-width: 768px) {
+  header .header-left .content svg {
+    width: 120px;
+    margin-left: 0;
+  }
 }
 header .header-right {
   display: flex;
