--- a/styles/scss/articles.scss
+++ b/styles/scss/articles.scss
@@ -4,7 +4,8 @@ body {
 }
 
 section.articles {
-    padding: 70px 0;
+    padding-top: 70px;
+    padding-bottom: 70px;
     text-align: center;
 
     p {
