--- a/styles/css/auth.css
+++ b/styles/css/auth.css
@@ -14,9 +14,7 @@ header .header-left canvas {
   top: 0;
   right: 0;
   left: 0;
-  width: 100%;
-  min-width: 300px;
-  min-height: 100%;
+  height: 100%;
   z-index: -1;
 }
 header .header-left .content svg {
