--- a/styles/css/home.css
+++ b/styles/css/home.css
@@ -13,15 +13,15 @@ header .header-left {
   position: relative;
   clip-path: url(#svgPath);
   min-height: 100vh;
+  overflow: hidden;
 }
 header .header-left canvas {
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
-  width: 100%;
-  min-width: 300px;
-  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
   z-index: -1;
 }
 header .header-left .content svg {
@@ -37,7 +37,7 @@ header .header-left .content svg {
 }
 @media screen and (max-width: 768px) {
   header .header-left .content svg {
-    width: 120px;
+    width: 110px;
     margin-left: 0;
   }
 }
@@ -69,6 +69,28 @@ header .header-right .content .bigtitle span:first-child {
 }
 header .header-right .content .bigtitle span:last-child {
   text-align: right;
+}
+@media screen and (max-width: 768px) {
+  header .header-right .content .bigtitle {
+    font-size: 5em;
+  }
+}
+@media screen and (max-width: 576px) {
+  header .header-left {
+    min-height: 0;
+    height: 100px;
+    width: 100%;
+    clip-path: none;
+  }
+  header .header-left .content {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+  header .header-left .content svg {
+    margin: 0;
+    height: 70px;
+  }
 }
 
 /*# sourceMappingURL=home.css.map */
