--- a/styles/scss/auth.scss
+++ b/styles/scss/auth.scss
@@ -14,9 +14,7 @@ header {
             top: 0;
             right: 0;
             left: 0;
-            width: 100%;
-            min-width: 300px;
-            min-height: 100%;
+            height: 100%;
             z-index: -1;
         }
 
