--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -14,15 +14,15 @@ header {
         position: relative;
         clip-path: url(#svgPath);
         min-height: 100vh;
+        overflow: hidden;
 
         canvas {
             position: absolute;
             top: 0;
             right: 0;
             left: 0;
-            width: 100%;
-            min-width: 300px;
-            min-height: 100%;
+            min-width: 100%;
+            height: 100%;
             z-index: -1;
         }
 
@@ -42,7 +42,7 @@ header {
             }
             @media screen and (max-width: 768px) {
                 svg {
-                    width: 120px;
+                    width: 110px;
                     margin-left: 0;
                 }
             }
@@ -75,8 +75,34 @@ header {
                     &:first-child {text-align: left;}
                     &:last-child {text-align: right;}
                 }
+
+                @media screen and (max-width: 768px) {
+                    & { 
+                        font-size: 5em;
+                    }
+                }
             }
         }
         
+    }
+
+    @media screen and (max-width: 576px) {
+        .header-left {
+            min-height: 0;
+            height: 100px;
+            width: 100%;
+            clip-path: none;
+
+            .content  {
+                display: flex;
+                align-items: center;
+                height: 100%;
+                svg {
+                    margin: 0;
+                    height: 70px;
+                }
+
+            }
+        }
     }
 }
