--- a/styles/scss/auth.scss
+++ b/styles/scss/auth.scss
@@ -2,23 +2,43 @@ header {
     position: relative;
     background: #2B2B2B;
 
+    .row {
+        height: 100%;
+        min-height: 30vw;
+    }
+
     .header-left {
-        background-color: #FFEED3;;
-        position: relative;
-        clip-path: url(#svgPath);
-        min-height: 100vh;
-        overflow: hidden;
-
-        canvas {
+        position: static;
+        
+        nav {
             position: absolute;
-            top: 0;
-            right: 0;
+            right: 15px;
             left: 0;
-            height: 100%;
-            z-index: -1;
+            top: 0;
+            z-index: 10;
+            margin-left: 25%;
+            
         }
-
         .content {
+            position: relative;
+            background-color: #FFEED3;;
+            position: relative;
+            clip-path: url(#svgPath);
+            min-height: 100vh;
+            height: 100%;
+            margin-left: -15px;
+            overflow: hidden;
+            
+            canvas {
+                position: absolute;
+                top: 0;
+                right: 0;
+                left: 0;
+                min-width: 100%;
+                height: 100%;
+                z-index: -1;
+            }
+
             svg {
                 margin-top: 40px;
                 margin-left: 30px;
@@ -34,14 +54,19 @@ header {
             }
             @media screen and (max-width: 768px) {
                 svg {
-                    width: 120px;
+                    width: 110px;
                     margin-left: 0;
                 }
             }
         }
+                
+        .btn-menu {
+            display: none;
+        }
     }
 
     .header-right {
+        padding-top: 100px;
         display: flex;
         flex-direction: column;
 
@@ -74,8 +99,8 @@ header {
 
             .form-box {
                 text-align: center;
-                width: 550px;
-                max-width: 100%;
+                width: 100%;
+                max-width: 550px;
                 margin: 0 auto 0 0;
             }
      
