--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -4,29 +4,42 @@ header {
     background-position: center;
     background-size: cover;
 
+
     .row {
         height: 100%;
         min-height: 30vw;
     }
 
     .header-left {
-        background-color: #FFEED3;;
-        position: relative;
-        clip-path: url(#svgPath);
-        min-height: 100vh;
-        overflow: hidden;
-
-        canvas {
+        position: static;
+        nav {
             position: absolute;
-            top: 0;
-            right: 0;
+            right: 15px;
             left: 0;
-            min-width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
+            top: 0;
+            z-index: 10;
+            margin-left: 25%;
 
+        }
         .content {
+            position: relative;
+            background-color: #FFEED3;;
+            position: relative;
+            clip-path: url(#svgPath);
+            min-height: 100vh;
+            margin-left: -15px;
+            overflow: hidden;
+            
+            canvas {
+                position: absolute;
+                top: 0;
+                right: 0;
+                left: 0;
+                min-width: 100%;
+                height: 100%;
+                z-index: -1;
+            }
+
             svg {
                 margin-top: 40px;
                 margin-left: 30px;
@@ -47,9 +60,14 @@ header {
                 }
             }
         }
+        
+        .btn-menu {
+            display: none;
+        }
     }
 
     .header-right {
+        padding-top: 100px;
         display: flex;
         flex-direction: column;
         
@@ -86,23 +104,4 @@ header {
         
     }
 
-    @media screen and (max-width: 576px) {
-        .header-left {
-            min-height: 0;
-            height: 100px;
-            width: 100%;
-            clip-path: none;
-
-            .content  {
-                display: flex;
-                align-items: center;
-                height: 100%;
-                svg {
-                    margin: 0;
-                    height: 70px;
-                }
-
-            }
-        }
-    }
 }
