--- a/styles/css/mentionslegales.css
+++ b/styles/css/mentionslegales.css
@@ -18,12 +18,17 @@ h2{
     color: #FFEED3;
     text-align: center;
     font-size: 3.1em;
+    font-family: "Bebas Neue", sans-serif;
 }
 
 h3{
     color: #FFEED3;
-    text-align: center;
+    text-align: justify;
     font-size: 2.4em;
+    padding-top: 50px;
+    padding-bottom: 20px;
+    margin-left: 150px;
+    font-family: "Bebas Neue", sans-serif;
 }
 
 a{
