--- a/styles/css/m-home.css
+++ b/styles/css/m-home.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 575px) {
   header .header-left {
     min-height: 0;
     max-height: 100px;
@@ -6,6 +6,7 @@
     clip-path: url(#topbar);
     background-color: #FFEED3;
     transition: max-height 0.4s;
+    overflow: hidden;
   }
   header .header-left .head *:hover {
     transform: translateY(0) !important;
