--- a/styles/scss/mentionslegales.scss
+++ b/styles/scss/mentionslegales.scss
@@ -1,3 +1,54 @@
 body{
     background-color: #2b2b2b;
+    line-height: 1.5;
+}
+
+.subtitle {
+    text-align: left;
+    position: relative;
+    padding-left: 14px;
+    color: #FFEED3;
+    font-size: 1.75rem;
+    line-height: 1em;
+
+
+    &:before {
+        content: "";
+        position: absolute;
+        display: block;
+        left: 0;
+        height: 100%;
+        width: 4px;
+        background: #E2A539;
+    }
+}
+
+
+p{
+    color: white;
+    text-align: justify;
+    font-size: 1.1em;
+    font-family: "Montserrat", sans-serif;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+h2{
+    color: #FFEED3;
+    text-align: center;
+    font-size: 3.1em;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+h3{
+    color: #FFEED3;
+    text-align: justify;
+    font-size: 2.4em;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    font-family: "Bebas Neue", sans-serif;
+}
+
+a{
+    color: #FFEED3;
 }
