--- a/styles/css/mentionslegales.css
+++ b/styles/css/mentionslegales.css
@@ -1,6 +1,5 @@
 body {
   background-color: #2b2b2b;
-  line-height: 1.5;
 }
 
 .subtitle {
@@ -21,7 +20,7 @@ body {
   background: #E2A539;
 }
 
-p {
+.container.mentions p {
   color: white;
   text-align: justify;
   font-size: 1.1em;
@@ -29,15 +28,13 @@ p {
   margin-top: 0;
   margin-bottom: 1rem;
 }
-
-h2 {
+.container.mentions h2 {
   color: #FFEED3;
   text-align: center;
   font-size: 3.1em;
   font-family: "Bebas Neue", sans-serif;
 }
-
-h3 {
+.container.mentions h3 {
   color: #FFEED3;
   text-align: justify;
   font-size: 2.4em;
@@ -45,8 +42,7 @@ h3 {
   margin-bottom: 20px;
   font-family: "Bebas Neue", sans-serif;
 }
-
-a {
+.container.mentions a {
   color: #FFEED3;
 }
 
