--- a/styles/scss/mentionslegales.scss
+++ b/styles/scss/mentionslegales.scss
@@ -1,6 +1,5 @@
 body{
     background-color: #2b2b2b;
-    line-height: 1.5;
 }
 
 .subtitle {
@@ -23,32 +22,35 @@ body{
     }
 }
 
+.container.mentions {
+    
+    p{
+        color: white;
+        text-align: justify;
+        font-size: 1.1em;
+        font-family: "Montserrat", sans-serif;
+        margin-top: 0;
+        margin-bottom: 1rem;
+    }
 
-p{
-    color: white;
-    text-align: justify;
-    font-size: 1.1em;
-    font-family: "Montserrat", sans-serif;
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
+    h2{
+        color: #FFEED3;
+        text-align: center;
+        font-size: 3.1em;
+        font-family: "Bebas Neue", sans-serif;
+    }
 
-h2{
-    color: #FFEED3;
-    text-align: center;
-    font-size: 3.1em;
-    font-family: "Bebas Neue", sans-serif;
-}
+    h3{
+        color: #FFEED3;
+        text-align: justify;
+        font-size: 2.4em;
+        margin-top: 50px;
+        margin-bottom: 20px;
+        font-family: "Bebas Neue", sans-serif;
+    }
 
-h3{
-    color: #FFEED3;
-    text-align: justify;
-    font-size: 2.4em;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    font-family: "Bebas Neue", sans-serif;
-}
+    a{
+        color: #FFEED3;
+    }
 
-a{
-    color: #FFEED3;
 }
