--- a/styles/scss/admin/commentaires.scss
+++ b/styles/scss/admin/commentaires.scss
@@ -39,7 +39,7 @@ body.comments {
 
             nav.menu-nav ul.admin-panel-links {
                 padding-top: 250px;
-                li.btn{
+                li {
                     position: relative;
                     padding: 0;
                     margin: 2px 0;
