--- a/styles/scss/article.scss
+++ b/styles/scss/article.scss
@@ -44,47 +44,70 @@ body {
             font-weight: 400;
         }
 
-        .like-button {
+        .footer {
+            margin: 40px 0;
             display: flex;
-            cursor: pointer;
-            align-items: center;
-            font-size: 1.5em;
-            position: relative;
-            width: 80px;
-            margin: 0 0 0 auto;
-            text-align: center;
-            color: white;
+            justify-content: space-between;
 
-            &.active {
-                svg path {
-                    fill: #E2A539;
+            .keywords {
+                ul {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    list-style: none;
+                    padding-left: 0;
+                    overflow: hidden;
+                    margin: 0;
+                    li {
+                        padding: 2px 10px;
+                        margin: 3px;
+                        background-color: white;
+                        white-space: nowrap;
+                        color: black;
+                    }
                 }
             }
-
-            &.nologged {
-                opacity: .4;
-                cursor: not-allowed;
-            }
-
-            svg {
-                height: 1em;
-            }
-
-            span.count {
-                display: inline-block;
-                margin: 0 auto;
-            }
-
-            &::after {
-                content: "";
+            .like-button {
+                display: flex;
+                cursor: pointer;
+                align-items: center;
+                font-size: 1.5em;
                 position: relative;
-                position: absolute;
-                right: 0;
-                height: 100%;
-                width: 2px;
-                background-color: #E2A539;
+                width: 80px;
+                margin: 0 0 0 auto;
+                text-align: center;
+                color: white;
+    
+                &.active {
+                    svg path {
+                        fill: #E2A539;
+                    }
+                }
+    
+                &.nologged {
+                    opacity: .4;
+                    cursor: not-allowed;
+                }
+    
+                svg {
+                    height: 1em;
+                }
+    
+                span.count {
+                    display: inline-block;
+                    margin: 0 auto;
+                }
+    
+                &::after {
+                    content: "";
+                    position: relative;
+                    position: absolute;
+                    right: 0;
+                    height: 100%;
+                    width: 2px;
+                    background-color: #E2A539;
+                }
             }
         }
-    
     }
 }
