--- a/styles/scss/articles.scss
+++ b/styles/scss/articles.scss
@@ -100,6 +100,23 @@ section.articles {
                 text-align: justify;
             }
         }
+
+        .keywords {
+            ul {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                list-style: none;
+                padding-left: 0;
+                overflow: hidden;
+                li {
+                    padding: 2px 10px;
+                    margin: 3px;
+                    background-color: white;
+                    white-space: nowrap;
+                }
+            }
+        }
         .link {
             text-align: right;
             .btn {
