--- a/styles/scss/profil.scss
+++ b/styles/scss/profil.scss
@@ -2,17 +2,55 @@ body{
     background-color: #2b2b2b;
 }
 
-.changerprenom{
+.changerutilisateur{
     color: #FFEED3;
-}
-
-.changernom{
-    color: #FFEED3;
+    font-size: 24px;
 }
 
 .changeremail{
     color: #FFEED3;
+    font-size: 24px;
 }
 .changerpassword{
     color: #FFEED3;
+    font-size: 24px;
+}
+
+.form-group{
+    margin-top: 50px;
+}
+
+.col-6{
+    margin-top: 70px;
+}
+h1{
+    color: #FFEED3;
+}
+
+.btn-primary{
+   background-color: #FFEED3;
+   color: #2b2b2b;
+
+}
+.btn-primary:hover {
+    background-color: white;
+    color: #2b2b2b;
+    transform: scale(1.2);
+}
+.btn-primary:active {
+    background-color: #FFEED3;
+    color: #2b2b2b;
+    
+}
+.image-user{
+    margin-top: 70px;
+}
+#change-user{
+    margin-top: 30px;
+    margin-left: 60px;
+}
+
+.image-user:hover {
+  
+    transform: rotate(0.02turn);
 }
