--- a/styles/css/common.css
+++ b/styles/css/common.css
@@ -1,6 +1,12 @@
 body {
   background-color: #2B2B2B;
   font-family: "Bebas Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+body main {
+  flex: 1;
 }
 
 /*# sourceMappingURL=common.css.map */
