--- a/styles/scss/pages/index.scss
+++ b/styles/scss/pages/index.scss
@@ -1,3 +1,9 @@
+header {
+    background-image: url("../../../assets/images/home.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
 main {
     position: relative;
     background-color: #2B2B2B;
