--- a/styles/css/pages/profil.css
+++ b/styles/css/pages/profil.css
@@ -16,26 +16,34 @@
   color: #FFEED3;
   font-size: 24px;
 }
-.container.profil .form-group {
-  margin-top: 50px;
+.container.profil .head {
+  text-align: center;
 }
-.container.profil .col-6 {
-  margin-top: 70px;
-}
-.container.profil h1 {
+.container.profil .head .title {
+  position: relative;
+  display: inline-block;
   color: #FFEED3;
+  font-size: 3.2em;
+  line-height: 1em;
 }
-.container.profil .btn-primary {
+.container.profil .head .title::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  height: 4px;
+  left: 0;
+  right: 0;
+  background-color: #E2A539;
+}
+.container.profil .head .alert {
+  text-align: left;
+}
+.container.profil .btn-edit {
   background-color: #FFEED3;
   color: #2b2b2b;
 }
-.container.profil .btn-primary:hover {
+.container.profil .btn-edit:hover, .container.profil .btn-edit:active {
   background-color: white;
-  color: #2b2b2b;
-  transform: scale(1.2);
-}
-.container.profil .btn-primary:active {
-  background-color: #FFEED3;
   color: #2b2b2b;
 }
 .container.profil .left {
@@ -56,8 +64,16 @@
 .container.profil .left button {
   margin-top: 30px;
 }
-.container.profil .image-user:hover {
-  transform: rotate(0.02turn);
+.container.profil form {
+  text-align: left;
+  padding: 40px 0;
+}
+.container.profil form input {
+  font-family: "Montserrat";
+}
+.container.profil form label {
+  color: #FFEED3;
+  margin-bottom: 2px;
 }
 
 /*# sourceMappingURL=profil.css.map */
