--- a/styles/css/menu/nav_dark.css
+++ b/styles/css/menu/nav_dark.css
@@ -4,7 +4,7 @@ nav .head svg path {
 nav .head .lang ul li a {
   color: #000;
 }
-nav .head .btn-member a {
+nav .head .btn a {
   color: #000;
 }
 nav ul.links li a.btn {
