--- a/styles/scss/menu/nav_dark.scss
+++ b/styles/scss/menu/nav_dark.scss
@@ -9,7 +9,7 @@ nav {
             color: #000;
         }
 
-        .btn-member {
+        .btn {
             a {
                 color: #000;
             }
