--- a/styles/css/pages/profil.css
+++ b/styles/css/pages/profil.css
@@ -35,6 +35,11 @@
   right: 0;
   background-color: #E2A539;
 }
+@media screen and (max-width: 575px) {
+  .container.profil .head .title {
+    font-size: 2em;
+  }
+}
 .container.profil .head .alert {
   text-align: left;
 }
