--- a/styles/scss/pages/profil.scss
+++ b/styles/scss/pages/profil.scss
@@ -74,6 +74,14 @@
             }
         }
         
+        input {
+            display: none;
+        }
+
+        label {
+            cursor: pointer;
+        }
+
         button {
             margin-top: 30px;
         }
