--- a/styles/scss/menu/header.scss
+++ b/styles/scss/menu/header.scss
@@ -10,7 +10,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: relative;
         }
+
+
 
         canvas {
             position: absolute;
